DB created, cards seeds add

--- a/server/.env_example
+++ b/server/.env_example
@@ -1,4 +1,4 @@
-DB=postgres://postgres:postgres@localhost:5432/[db_name]
+DB=postgresql://postgres.uzgsargixrokgwnexqln:1234@aws-0-eu-central-1.pooler.supabase.com:5432/postgres
 PORT=3000
 SECRET_ACCESS_TOKEN=
 SECRET_REFRESH_TOKEN=
