--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./src/app.js",
     "dev": "nodemon ./src/app.js --ext js,json,css,jsx",
-    "db": "npx sequelize db:drop && npx sequelize db:create  && npx sequelize db:migrate && npx sequelize db:seed:all"
+    "db": "npx sequelize db:drop && npx sequelize db:create  && npx sequelize db:migrate && npx sequelize db:seed:all",
+    "db:main": "npx sequelize db:migrate && npx sequelize db:seed:all"
   },
   "keywords": [],
   "author": "",
