--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "start": "node ./src/app.js",
     "dev": "nodemon ./src/app.js --ext js,json,css,jsx",
     "db": "npx sequelize db:drop && npx sequelize db:create  && npx sequelize db:migrate && npx sequelize db:seed:all",
-    "db:main": "npx sequelize db:migrate && npx sequelize db:seed:all"
+    "db:main": "npx sequelize db:migrate && npx sequelize db:seed:all",
+    "seed": "npx sequelize db:seed:all"
   },
   "keywords": [],
   "author": "",
