--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "@reduxjs/toolkit": "^2.5.1",
     "antd": "^5.24.0",
     "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2"
